adding tf and auto build new image 2

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,39 +2,39 @@
 
 steps:
 
-# ### Build
-#   - id: 'build'
-#     name: 'gcr.io/cloud-builders/docker'
-#     args: ['build', '-t', 'gcr.io/devops-343007/translate-app:latest', 'cloud/python/' ]
-
-# ## Push / Publish
-#   - id: 'push'
-#     name: 'gcr.io/cloud-builders/docker'
-#     args: ['push', 'gcr.io/devops-343007/translate-app:latest']
-
-
 ### Build
-
   - id: 'build'
     name: 'gcr.io/cloud-builders/docker'
-    entrypoint: 'bash'
-    args: 
-      - '-c'
-      - |
-          docker build -t gcr.io/devops-343007/translate-app ./cloud/python
+    args: ['build', '-t', 'gcr.io/devops-343007/translate-app:latest', './cloud/python' ]
 
-
-### Test
-
-
-### Publish
-  - id: 'publish'
+## Push / Publish
+  - id: 'push'
     name: 'gcr.io/cloud-builders/docker'
-    entrypoint: 'bash'
-    args: 
-      - '-c'
-      - |
-          docker push gcr.io/devops-343007/translate-app
+    args: ['push', 'gcr.io/devops-343007/translate-app:latest']
+
+
+# ### Build
+
+#   - id: 'build'
+#     name: 'gcr.io/cloud-builders/docker'
+#     entrypoint: 'bash'
+#     args: 
+#       - '-c'
+#       - |
+#           docker build -t gcr.io/devops-343007/translate-app ./cloud/python
+
+
+# ### Test
+
+
+# ### Publish
+#   - id: 'publish'
+#     name: 'gcr.io/cloud-builders/docker'
+#     entrypoint: 'bash'
+#     args: 
+#       - '-c'
+#       - |
+#           docker push gcr.io/devops-343007/translate-app
 
 
 
